--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 server:
   port: 8888
 mybatis:
-  mapper-locations: mapper/*.xml
+  mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.project.etsapi.entity
 
 
