--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,10 @@
 /target/
 
 # config
-ExperimentTeachingSystemAPI.iml
 HELP.md
 mvnw
 mvnw.cmd
-pom.xml
+ETSapi.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
