--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     username: root
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
+  mail:
+    host: smtp.163.com
+    username: ets_system@163.com
+    password: GQGQGRLJPOQIKEFF
+    default-encoding: utf-8
 server:
   port: 8888
 mybatis:
