--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   mail:
     host: smtp.163.com
     username: ets_system@163.com
-    password: GQGQGRLJPOQIKEFF
+    password: FGBMZMJHTNUMVBZS
     default-encoding: utf-8
 server:
   port: 8888
