--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://175.24.233.44:3306/ets?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
-    username: root
-    password: password
+    url: jdbc:mysql://1.117.164.153:3306/ets?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
+    username: kya
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
   mail:
     host: smtp.163.com
